@@ -1,3 +1,7 @@
+* 2013-05-03 - marcus.klein@open-xchange.com
+
+ - Fix for bug 26323: Deal with multi-threading problem if OSGi cache service gets unavailable.
+
 * 2013-05-03 - thorben.betten@open-xchange.com
 
  - Fix for bug 26341: Don't stick to certain values, but only check existence of associated option
